# illumina-to-vcf

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GSAMD-24v3-0-EA_20034606_A2_blacklist.txt  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.py  setup.py
.circleci/: config.yml
docker/: Dockerfile  Dockerfile.ref  Dockerfile.test-ref  build.sh  run.sh
illumina2vcf/: BPMReader.py  BPMRecord.py  ReferenceGenome.py  __about__.py  __init__.py  __main__.py  illumina.py  vcf.py
illumina2vcf/bpm/: BPMReader.py  BPMRecord.py  IlluminaBeadArrayFiles.py  README.md  ReferenceGenome.py  bpmreader.py  bpmrecord.py  illuminabeadarrayfiles.py  referencegenome.py
ref/: GSAMD-24v3-0-EA_20034606_A2_blocklist.txt
tests/: conftest.py  illumina_test.py  vcf_test.py
tests/data/: GSA-24v3-0_A2.trim.csv  Homo_sapiens_assembly38.trim.fasta.fai  download.sh
