[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "illumina2vcf"
dynamic = ["version"]
description = 'Converter to turn Illumina final report into a VCF file.'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [{ name = "Adam Faulconbridge", email = "adam@sanogenetics.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["puretabix", "pyfaidx", "s3fs", "fsspec", "aiohttp >= 3.8.2"]

[project.urls]
Documentation = "https://github.com/unknown/illumina2vcf#readme"
Issues = "https://github.com/unknown/illumina2vcf/issues"
Source = "https://github.com/unknown/illumina2vcf"

[tool.hatch.version]
path = "illumina2vcf/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["mypy>=1.0.0", "ruff>=0.0.243"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:illumina2vcf tests}"
style = ["ruff {args:.}"]
fmt = ["ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.ruff]
target-version = "py37"
line-length = 120
extend-exclude = ["tests", "illumina2vcf/bpm"]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # recommended ignores for formatting consistenct
  'E501',
  'ISC001',
  'Q000',
  'Q001',
  'Q002',
  'Q003',
  'W191',
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["illumina2vcf"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["illumina2vcf", "tests"]
branch = true
parallel = true
omit = ["illumina2vcf/__about__.py"]

[tool.coverage.paths]
illumina2vcf = ["illumina2vcf"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
